--- a/src/index.html
+++ b/src/index.html
@@ -16,5 +16,14 @@
 </head>
 <body>
   <app-root></app-root>
+
+  <div style="position: fixed;bottom: 0;right: 0; color:white"> 
+    <a style="margin-left: 84%" rel="license" href="http://creativecommons.org/licenses/by/4.0/">
+      <img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" />
+    </a>
+    <br/>This work is licensed under a 
+    <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License
+    </a>
+  </div>
 </body>
 </html>
